# CSC2106_IOT_GP21

./: README.md
ESP-MESH/: Progress.md  README.md
ESP-MESH/internal_communication/: README.md  benchmark.py  benchmark_20260331_192015.csv  ping_rtt.py  receive_image.py  send_image.py  send_to_mesh.py
ESP-MESH/internal_communication/main/: CMakeLists.txt  Kconfig.projbuild  mesh_main.c
lora-mesh/: INSTRUCTIONS.md  Progress.md  README.md  mesh_node.ino  receiver.py  sender.py
lora-mesh/mesh-node-text-only/: mesh_node.ino
pico-coap-multi/: CMakeLists.txt
pico-coap-multi/src/: client_main.c  coap_min.c  coap_min.h  config.h  hw_config.c  lwipopts.h  server_main.c
